--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+The content below is only a placeholder and can be replaced.
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -17,4 +17,52 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+
+<!--native html position assignment-->
+<!--<div class = "container">-->
+  <!--<div class = "nav">-->
+    <!--<h4>An unordered list:</h4>-->
+    <!--<ul>-->
+      <!--<li>Home</li>-->
+      <!--<li>Taco Menu</li>-->
+      <!--<li>Draft List</li>-->
+      <!--<li>Hours</li>-->
+      <!--<li>Directions</li>-->
+      <!--<li>Contact</li>-->
+        <!--<ul>-->
+          <!--<li>xxx-xxx-xxxx</li>-->
+        <!--</ul>-->
+    <!--</ul>-->
+  <!--</div>-->
+  <!--<div class = "section1">-->
+    <!--<p>This is some text in section1.</p>-->
+  <!--</div>-->
+  <!--<div class = "section2">-->
+    <!--<p>This is some text in section2.</p>-->
+  <!--</div>-->
+  <!--<div class = "section3">-->
+    <!--<p>This is some text in section3.</p>-->
+  <!--</div>-->
+<!--</div>-->
+
+<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>-->
+<!--<div class="container">-->
+  <!--<div class="login-form">-->
+  <!--<div class="form-group">-->
+    <!--<input type="email" class="form-control" id="inputEmail" placeholder="username">-->
+  <!--</div>-->
+  <!--<div class="form-group">-->
+    <!--<input type="password" class="form-control" id="inputPassword" placeholder="password">-->
+  <!--</div>-->
+  <!--<div>-->
+    <!--<button type="submit" class="btn btn-success">Login</button>-->
+  <!--</div>-->
+  <!--<div>-->
+    <!--<span>Not registered?</span>-->
+    <!--<span><a href="reset.html">Create an account</a></span>-->
+  <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
 
